--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
+:root{
+  --mainDark: #343B40;
+  --mainWhite: #fff;
+  --mainYellow: #FFD200;
+}
 
 form button{
   border: none;
@@ -61,7 +66,7 @@ form button{
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 45rem;
+  height: 40rem;
 }
 
 
@@ -79,4 +84,24 @@ form button{
 
 .product-gallery{
   cursor: pointer;
+}
+
+.btn-black{
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: #343B40;
+  border-radius: 0 !important;
+  border: 0.1rem solid #343B40;
+}
+
+.btn-black:hover{
+  background: var(--mainDark) !important;
+  color: var(--mainWhite) !important;
+}
+
+.cart-icon{
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--mainYellow)
 }
